--- a/index.css
+++ b/index.css
@@ -1,10 +1,14 @@
 .input_1{
   margin-bottom: 10px;
   text-align: center;
+  font-size: 300%
+  font-family: Calibri, sans-serif;
 }
 
 .login{
   text-align: center;
+  font-size: 300%
+  font-family: Calibri, sans-serif;
 }
 
 .form_container >div{
@@ -12,4 +16,19 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  border-radius: 25px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 30px;
+}
+
+h3 {
+  font-size: 300%;
+  font-family: Calibri, sans-serif;
+}
+
+body {
+   background-image: url("background.jpg");
+   background-color: #cccccc;
 }
