--- a/index.css
+++ b/index.css
@@ -11,8 +11,8 @@
   font-family: Calibri, sans-serif;
 }
 
-.form_container >div{
-  position: absolute;
+.form_container {
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -21,6 +21,21 @@
   padding-left: 30px;
   padding-right: 30px;
   padding-bottom: 30px;
+  margin-right: 30%;
+}
+
+.form_container2 {
+  position: relative;
+  /* top: 50%; */
+  left: 15%;
+  /* transform: translate(-50%, -50%); */
+  background-color: #ffffff;
+  border-radius: 25px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 30px;
+  margin-right: 30%;
+  top: 20vh;
 }
 
 h3 {
