--- a/index.css
+++ b/index.css
@@ -26,9 +26,7 @@
 
 .form_container2 {
   position: relative;
-  /* top: 50%; */
   left: 15%;
-  /* transform: translate(-50%, -50%); */
   background-color: #ffffff;
   border-radius: 25px;
   padding-left: 30px;
@@ -36,6 +34,16 @@
   padding-bottom: 30px;
   margin-right: 30%;
   top: 20vh;
+}
+
+.admin_container {
+  position: relative;
+  background-color: #ffffff;
+  border-radius: 25px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 30px;
+  margin-right: 30%;
 }
 
 h3 {
