--- a/index.css
+++ b/index.css
@@ -1,3 +1,95 @@
+#title {
+  text-align: center;
+  color: white;
+  font-size: 200%;
+}
+
+body {
+  border: none;
+  background-image: url("background.jpg");
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+
+#login_container {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  border-radius: 25px;
+  background-color: DodgerBlue;
+  width: 50%;
+}
+
+.input_1 {
+  margin: auto;
+  width: 100%;
+  padding: 7px 0px;
+}
+
+.input_1 input {
+  border-radius: 25px;
+  width: 100%;
+  border: none;
+  padding: 17px;
+}
+
+#login_button_div {
+  width: 100%;
+  padding: 7px 0px;
+}
+
+#Login {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 17px;
+
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 20px;
+  width: 100%;
+}
+
+#user_container {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  border-radius: 25px;
+  background-color: DodgerBlue;
+}
+
+
+
+
+table {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #ddd;
+  padding: 7px;
+  text-align: center;
+}
+
+tr:nth-child(even){background-color: #f2f2f2;}
+tr:nth-child(odd){background-color: white;}
+
+tr:hover {background-color: #ddd;}
+th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    background-color: #4CAF50;
+    color: white;
+}
+
+/*
 .input_1{
   margin-bottom: 10px;
   text-align: center;
@@ -58,3 +150,4 @@ body {
    background-position: center center;
    background-color: #cccccc;
 }
+*/
