--- a/index.css
+++ b/index.css
@@ -26,6 +26,21 @@ button:hover {
   background-color: chocolate
 }
 
+#newUser_button {
+     background:none;
+     color:inherit;
+     border:none;
+     padding:0;
+     border-radius: 0px;
+     font: inherit;
+     cursor: pointer;
+     color: white;
+}
+#newUser_button:hover {
+     color: yellow
+}
+
+
 input {
   border-radius: 25px;
   border: none;
@@ -52,7 +67,7 @@ body {
 }
 
 
-#login_container {
+#login_container, #register_div{
   display: flex;
   flex-direction: column;
   padding: 20px;
@@ -60,6 +75,20 @@ body {
   background-color: DodgerBlue;
   width: 50%;
 }
+
+.input_2 {
+  margin: 3px;
+  width: 100%;
+  padding: 7px 10px;
+}
+
+.input_2 input {
+  border-radius: 25px;
+  width: 100%;
+  border: none;
+  padding: 17px;
+}
+
 
 .input_1 {
   margin: auto;
@@ -73,6 +102,7 @@ body {
   border: none;
   padding: 17px;
 }
+
 
 #login_button_div {
   width: 100%;
